--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header"
-                        aria-expanded="false">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header" aria-expanded="false">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -37,7 +36,10 @@
                             <a href="#goods">Товары</a>
                         </li>
                         <li>
-                            <a href="#about">О магазине</a>
+                            <a href="#advantages">О нас</a>
+                        </li>
+                        <li>
+                            <a href="#video-block">Видео</a>
                         </li>
                     </ul>
                     <form class="navbar-form navbar-left">
@@ -56,7 +58,10 @@
                                     <a href="#goods">Товары</a>
                                 </li>
                                 <li>
-                                    <a href="#about">О магазине</a>
+                                    <a href="#advantages">О нас</a>
+                                </li>
+                                <li>
+                                    <a href="#video-block">Видео</a>
                                 </li>
                             </ul>
                         </li>
@@ -102,19 +107,74 @@
                 </div>
             </div>
         </section>
-        <section id="about">
+        <section id="advantages" class="advantages">
             <div class="container">
-                <div class="row centered">
-                    <div class="col-lg-8">
-                        <h4>Наши гитары...</h4>
-                        <p>Самые лучшие в мире</p>
-                        <p>Самые топовые</p>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="advantages__slogan">
+                            <h1 class="advantages__slogan_header">Почему именно наши гитары?</h1>
+                            <p class="advantages__slogan_text">Наши гитары — это ...</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="advantages__points">
+                            <div class="advantages__points_item text-left">
+                                Высокое качество
+                            </div>
+                            <div class="advantages__points_item text-right">
+                                Отличное звучание
+                            </div>
+                            <div class="advantages__points_item text-left">
+                                Приятные цены
+                            </div>
+                            <div class="advantages__points_item text-right">
+                                И многое другое...
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="advantages" class="advantages">
-            
+        <section class="video-block" id="video-block">
+            <div class="container">
+                <div class="row" style="margin-top: 60px;">
+                    <div class="col-lg-7">
+                        <div class="video-block__title">
+                            <h1>Оцените
+                                <strong>звучание</strong> наших</h1>
+                            <p>гитар
+                                <strong>вживую</strong>
+                            </p>
+                            <span class="play-icon">
+                                <i class="fa fa-play-circle" id="play-icon"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="video-block__player">
+                            <video height="200" id="video">
+                                <source src="assets/videos/guitar.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="reviews" id="reviews">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="reviews__human-info">
+
+                        </div>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="reviews__text">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
