reviews and video added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Музыкальный магазин</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Lobster|Pacifico&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -41,6 +42,9 @@
                         <li>
                             <a href="#video-block">Видео</a>
                         </li>
+                        <li>
+                            <a href="#reviews">Отзывы</a>
+                        </li>
                     </ul>
                     <form class="navbar-form navbar-left">
                         <div class="form-group">
@@ -62,6 +66,9 @@
                                 </li>
                                 <li>
                                     <a href="#video-block">Видео</a>
+                                </li>
+                                <li>
+                                    <a href="#reviews">Отзывы</a>
                                 </li>
                             </ul>
                         </li>
@@ -162,17 +169,83 @@
         </section>
         <section class="reviews" id="reviews">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-4">
+                <div class="row row-primary">
+                    <div class="container">
+                        <div class="col-lg-12">
+                            <div class="reviews__header">
+                                Отзывы наших клиентов
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row row-colored">
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-2">
                         <div class="reviews__human-info">
-
+                            <h1 class="reviews__human-info_name">
+                                Глеб
+                            </h1>
+                            <img src="assets/img/reviews/human_photo_1.jpg" alt="Gleb" height="130" width="130" class="reviews__human-info_photo">
                         </div>
                     </div>
-                    <div class="col-lg-8">
+                    <div class="col-lg-7">
                         <div class="reviews__text">
-                            
+                            "Отличный магазин! Покупал не только гитару, но и аппаратуру для звукозаписи. Качество порадовало!"
                         </div>
                     </div>
+                    <div class="col-lg-2"></div>
+                </div>
+                <div class="row row-primary">
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-7">
+                        <div class="reviews__text">
+                            "О гитарах могу сказать одно — здесь они однозначно лучшие! Теперь советую GuitarLand всем друзьям-рокерам!"
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="reviews__human-info">
+                            <h1 class="reviews__human-info_name">
+                                Кирилл
+                            </h1>
+                            <img src="assets/img/reviews/human_photo_2.jpg" alt="Bronik" height="130" width="130" class="reviews__human-info_photo">
+                        </div>
+                    </div>
+                    <div class="col-lg-1"></div>
+                </div>
+                <div class="row row-colored">
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-2">
+                        <div class="reviews__human-info">
+                            <h1 class="reviews__human-info_name">
+                                Стефания
+                            </h1>
+                            <img src="assets/img/reviews/human_photo_3.jpg" alt="Stefa" height="130" width="130" class="reviews__human-info_photo">
+                        </div>
+                    </div>
+                    <div class="col-lg-7">
+                        <div class="reviews__text">
+                            "Отличный ассортимент, приятные и знающие своё дело сотрудники! Всё на высшем уровне!"
+                        </div>
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div>
+                <div class="row row-primary">
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-7">
+                        <div class="reviews__text">
+                            "Сама не играю на гитаре, выбирала подарок другу. Сотрудники проконсультировали, помогли выбрать. Подарок другу очень понравился!
+                            Спасибо!"
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="reviews__human-info">
+                            <h1 class="reviews__human-info_name">
+                                Лиза
+                            </h1>
+                            <img src="assets/img/reviews/human_photo_4.jpg" alt="Liza" height="130" width="130" class="reviews__human-info_photo">
+                        </div>
+                    </div>
+                    <div class="col-lg-1"></div>
                 </div>
             </div>
         </section>
